# orazaev

./: README  index.pug
asciiart/: asciiart.cpp  asciiart.h
asciiart/utest/: Makefile  main.cpp  utest
cmcontroller/: .cmc_server.h.swp  cmc_server.cpp  cmc_server.h  cmc_thread_inspector.cpp  cmc_thread_inspector.h  cmcontroll  cmdefinitions.h  cmdefinitions.h.gch  main.cpp  out  ut_threadoperator.cpp
cmcontroller/cmcontroll/: Makefile  cmc_server.cpp  cmc_server.h  cmcontroll  main.cpp  (+3 more)
config/: .bashrc  .pythonstartup  .vimrc  host_configure.sh
cppunit/: MiniCppUnit.cxx  MiniCppUnit.hxx  example.cpp
fit/: calculateMatchScore.m  imGroupMatch.m  immatch.m  imnormalize.m  imsift.m  loadImgsFromFile.m
mafia/: dbutils.py  explorative.R  fetch_games.py  fetching.py  mafia.py  processed_games.csv
mafshow/: glicko2.py  mafia.py  processed_games.csv
mes/: .pythonhistory  mes.py  test_big_message.txt
practice/: README  a.out  classInClass.cpp  func_pointer.cpp  hello_concurrent.cpp  map_throw.cpp  mem_hole.cpp  thread_dead.cpp  thread_self.cpp
sgen/: cxx_example.sgen  cxxgen  example.sgen  py_example.sgen  pygen  sgen.py
shiyanbin/: fetch_albums.py
socket/: TSocket.cpp  TSocket.h  socktest.out
thread/: TMutex.cpp  TMutex.h  TThread.cpp  TThread.h  ut_mutex.cpp
threads/: TThread.cpp
util/: TError.h
work/consultant/: CMakeLists.txt  README.rst  app1.cpp  app2.cpp  string_expression.cpp  string_expression.h  string_expression_ut.cpp
work/consultant/src/: app1.cpp  app2.cpp  string_expression.cpp  string_expression.h  string_expression_ut.cpp
(+509 files in other folders)
